--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
       content="Know your every aspect of your happiness"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
     <title>The Wheel of Happiness - Measure your happiness</title>
   </head>
   <body>
